--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  outline: 0;
 }
 
 html {
@@ -9,6 +10,9 @@ html {
 }
 
 .page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -35,4 +39,270 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  width: 1140px;
+  height: 534px;
+  gap: 30px;
+  margin-top: -300px;
+}
+
+.result {
+  align-self: flex-end;
+}
+
+.content__details {
+  align-self: flex-end;
+  width: 100%;
+  height: auto;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  height: 298px;
+  overflow: scroll;
+  margin-top: 27px;
+  gap: 30px;
+  position: relative;
+}
+
+.result__video-container {
+  width: 711px;
+  height: 386px;
+  margin-bottom: 25px;
+  position: relative;
+}
+
+.result__video-container video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  width: 399px;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 100%;
+}
+
+.content__video-card-description-container {
+  width: 100%;
+  height: auto;
+}
+
+.title {
+  font-family: Oswald;
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 70px;
+  letter-spacing: 0em;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.search-form__fieldset-title {
+  font-family: 'Fira Sans Condensed';
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.content__accent {
+  color: #545050;
+  font-family: Oswald;
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 70px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  color: white;
+}
+
+.content__video-card-title {
+  text-transform: uppercase;
+  font-family: Oswald;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.content__video-card-description {
+  line-height: 16.2px;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+fieldset {
+  border: none;
+}
+
+.search-form__label {
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+  padding: 1px;
+}
+
+.search-form__textfield {
+  width: 225px;
+  background-color: transparent;
+  border-width: 1px 0px 1px 0px;
+  border-style: solid;
+  border-color: #FFFFFF;
+  color: #FFFFFF;
+  appearance: none;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.search-form__textfield::placeholder {
+  color: #FFFFFFB2;
+  font-family: 'Fira Sans Condensed';
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.search-form__label:has(:focus-visible) {
+  border: 1px white solid;
+}
+
+.search-form__fieldset-title {
+  font-family: 'Fira Sans Condensed';
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-bottom: 5px;
+
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  margin-bottom: 5px;
+}
+
+.button {
+  background-color: transparent;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #FFFFFF;
+  color: #FFFFFF;
+  font-family: 'Fira Sans Condensed';
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: center;
+  height: 34px;
+  cursor: pointer;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+button:focus-visible {
+  outline: 1px solid #fff;
+  padding: 10px;
+}
+
+.search-form__submit-button {
+  width: 194px;
+}
+
+
+.search-form__pseudo-checkbox {
+  border: 1px white solid;
+  width: 19px;
+  height: 19px;
+  margin-right: 5px;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
+  content: " ";
+  display: block;
+  width: 15px;
+  height: 15px;
+  margin-left: 1px;
+  margin-top: 1px;
+  background-color: white;
+}
+
+.search-form__label-text {
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left; 
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline; 
+}
+
+.more-button {
+  width: 100%;
+}
+
+.content__card-link_current {
+  background-color:#545050;
+  padding: 2px;
+}
+
+.content__card-link:focus-visible {
+  border: 1px solid white;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:active {
+  background-color:#545050;
 }
